lab1/Test/L1-A-13-19.output
Error Type A at Line 11
Error Type B at Line 12
Error Type B at Line 20
Error Type B at Line 23
Error Type B at Line 24
Error Type B at Line 26
Error Type A at Line 36
