lab1/Test/L1-A-13-19.cmm
int ;
int ;
struct d f3z8PqM9ddV3b 
;
struct e1pZXB_U ;
struct {
}MrgrdEHQZJMxmT , GwAL2VRMRnTOT 

;
struct zsWxqP {
}d ( int N , float Y1OJ7 [ 1447963432 ] ~) {
  struct if e6NR2oZXIF q1sckNi7Ng2X9 ;
}
int ;
int ;
int v08leHiQsYYqMb 
;
int ;
int ;
< int ;
int tR8eZFTGksH ( ) {
  if ( Wsj1mn7yyS4 )   vywrn4ikVsF_ ;
else   if ( WRtNCkPPhNA5UczX )   if F8_v0KmCxigTobNn 
    )   ARZjt3H2xBhgEYQSw while ;
else {
    int M >= ;
    int UWk0i1_5KgWJ6rbn , tosM2bSFw = GRT5yblSvzw 
      ;
    return _wI5scs5l41WBKCv ;
  }


  while ( B0BjNEWuS572SHsUf )   WV = z9dR0vp1ikJC87JmSIJV 
    || HinXlCxlL2UMIb5tgEh - - ! N [ _l0u6m_gET2 && X 
    <= G6I + pq2UuyuKnZTy ( t4_vPnVTBdaX74e , dPSFVNfcLgf_x 
    ^== EHyQhyqQu / - - ( MtwUPDRvkisEmPO >= dALCE ( EJ2uf0TeOJwt2z91iu0 
    || Cuze2 != rvrsdPp3lJ0r - ysqPFrEsGhzocU [ _TVOd 
    = zHvtKFIoSX1 && zYzt5vKU06Be6wMJo < xS > R_nsq2YZGwU 
    ] + 1237188790.1234736308 / ! 882030811 ) . nKxXrwOG 
    ) . l7Mbf ) / ! ! - F8J8al1TEzWjcZWdqzK * - ! QZJMWarKPGHhmGwlrw 
    ( ) ] ;

}
